# enigma2-plugin-stalkerclient

./: .gitignore  LICENSE.md  Makefile.am  README.md  configure.ac
DEBIAN/: control
StalkerClient/: .gitignore  StalkerChannels.py  api.py  plugin.py  stalker.py
meta/: Makefile.am  index-stalkerclient.xml  plugin_stalkerclient.xml
src/: Makefile.am
src/StalkerClient/: .gitignore  Makefile.am  StalkerConfig.py  api.py
